# raytracing

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
include/: Bulb.h  Circle.h  DraggableCircle.h  Global.h  circle.h
src/: Bulb.cpp  Circle.cpp  DraggableCircle.cpp  circle.cpp  main.cpp
